--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^3.0.0",
     "morgan": "^1.6.1",
     "nodemon": "^1.11.0",
+    "request": "^2.81.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
