--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "mocha --recursive test",
-    "test:coverage": "nyc npm test",
-    "test:unit": "mocha --recursive test/middleware test/models test/routes",
-    "test:integration": "mocha --recursive test/integration"
+    "start": "npm run uglify:js && npm run live && nodemon app.js",
+    "live": "ngrok http 3000",
+    "uglify:js": "uglifyjs ./public/js/*.js --compress --mangle --name-cache  --support-ie8    -o ./public/js/script.min.js",
+    "uglify:css" : "uglifycss ./public/css/style.css > ./public/css/style.min.css"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "compression": "^1.6.2",
     "cookie-parser": "^1.3.3",
     "dotenv": "^4.0.0",
     "express": "^4.13.3",
@@ -30,7 +30,9 @@
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^3.0.0",
     "mocha": "^3.0.2",
+    "ngrok": "^2.2.6",
     "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "uglify-js": "^2.8.15"
   }
 }
