--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "npm run uglify:js && npm run live && nodemon app.js",
     "live": "ngrok http 3000",
     "uglify:js": "uglifyjs ./public/js/*.js --compress --mangle --name-cache  --support-ie8    -o ./public/js/script.min.js",
-    "uglify:css" : "uglifycss ./public/css/style.css > ./public/css/style.min.css"
+    "uglify:css": "uglifycss ./public/css/style.css > ./public/css/style.min.css"
   },
   "dependencies": {
+    "async": "^2.1.5",
     "body-parser": "^1.13.3",
     "compression": "^1.6.2",
     "cookie-parser": "^1.3.3",
