--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "funda-serverside",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "private": "true",
   "main": "app.js",
   "scripts": {
     "start": "npm run uglify:js && npm run uglify:css && nodemon app.js",
