--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": "true",
   "main": "app.js",
   "scripts": {
-    "start": "npm run uglify:js && npm run uglify:css && nodemon app.js",
+    "start": "npm run uglify:js && npm run uglify:css && critical:css && nodemon app.js",
     "live": "ngrok http 3000",
     "uglify:js": "uglifyjs ./public/js/*.js --compress --mangle --name-cache  --support-ie8    -o ./public/js/script.min.js",
-    "uglify:css": "uglifycss ./public/css/style.css > ./public/css/style.min.css"
+    "uglify:css": "uglifycss ./public/css/style.css > ./public/css/style.min.css",
+    "critical:css": "node criticalCSS.js"
   },
   "dependencies": {
     "async": "^2.1.5",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "debug": "^2.2.0",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
@@ -33,6 +35,7 @@
     "mocha": "^3.0.2",
     "ngrok": "^2.2.6",
     "nyc": "^10.0.0",
+    "penthouse": "^0.10.9",
     "supertest": "^2.0.0",
     "uglify-js": "^2.8.15"
   }
