added browserify and some client modules

--- a/package.json
+++ b/package.json
@@ -4,30 +4,35 @@
   "private": "true",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon --debug app.js",
     "live": "ngrok http 3000",
     "bundle": "npm run uglify:js && npm run uglify:css && npm run critical:css",
     "uglify:js": "uglifyjs ./public/js/*.js --compress --mangle --name-cache  --support-ie8    -o ./public/js/script.min.js",
     "uglify:css": "uglifycss ./public/css/style.css > ./public/css/style.min.css",
-    "critical:css": "node criticalCSS.js"
+    "critical:css": "node criticalCSS.js",
+    "build": "browserify public/js/script.js -o public/js/index.js",
+    "watch": "watchify public/js/script.js -o public/js/index.js"
   },
   "dependencies": {
     "async": "^2.1.5",
+    "axios": "^0.16.1",
     "body-parser": "^1.13.3",
     "compression": "^1.6.2",
     "cookie-parser": "^1.3.3",
     "dotenv": "^4.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
+    "fetch-jsonp": "^1.0.6",
+    "jsonp": "^0.2.1",
     "morgan": "^1.6.1",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
+    "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "debug": "^2.2.0",
-    "fs": "0.0.1-security",
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
@@ -36,8 +41,8 @@
     "mocha": "^3.0.2",
     "ngrok": "^2.2.6",
     "nyc": "^10.0.0",
-    "penthouse": "^0.10.9",
     "supertest": "^2.0.0",
-    "uglify-js": "^2.8.15"
+    "uglify-js": "^2.8.15",
+    "watchify": "^3.9.0"
   }
 }
